Show picks in profile

--- a/pool/templates/profile.html
+++ b/pool/templates/profile.html
@@ -3,3 +3,15 @@
 {{ user.email }}
 
 <a href="{% url 'select_characters' %}">Select Characters</a>
+
+<br/>
+
+<h3>Picked to live</h3>
+
+{{ lives }}
+
+<br/>
+
+<h3>Picked to die</h3>
+
+{{ dies }}
