--- a/pool/templates/index.html
+++ b/pool/templates/index.html
@@ -1,5 +1,16 @@
 <h4>Game of Thrones Death Pool</h4>
 
+<p>Make your prediction for who will survive Season 8 of Game of Thrones.</p>
+
+<h4>Disclaimers</h4>
+
+<ul>
+    <li>Spoilers for people not up-to-date with Game of Thrones, the TV Show.</li>
+    <li>Crappy programming: I am learning Python. I am learning Django. I have not bothered to put this behind https. Just don't use the same email and password you use for your online investment account, OK?</li>
+    <li>Alpha Software: Your picks might get deleted if things get migrated.</li>
+    <li>If you find a bug, just let me know. Or better yet, <a href="https://github.com/ojplg/gotdp">fix it</a> and I will pull your patch.</li>
+</ul>
+
 <ul>
     <li><a href="accounts/login">Login</a></li>
     <li><a href="{% url 'register_user' %}">Register</a></li>
