--- a/pool/templates/profile.html
+++ b/pool/templates/profile.html
@@ -1,8 +1,6 @@
-<h4>Profile Page</h4>
+<h4>Picks for {{ user.email }}</h4>
 
-{{ user.email }}
-
-<a href="{% url 'select_characters' %}">Select Characters</a>
+<a href="{% url 'select_characters' %}">Update your picks!</a>
 
 <br/>
 
