--- a/pool/templates/index.html
+++ b/pool/templates/index.html
@@ -1,4 +1,14 @@
-<h4>Game of Thrones Death Pool</h4>
+
+{% load static %}
+
+<head>
+    <link rel="stylesheet" type="text/css" href="{% static "pool/gotdp.css" %}">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya" rel="stylesheet"> 
+</head>
+
+<body background="{% static "pool/arya_walder.jpeg" %}">
+
+<h1>Game of Thrones Death Pool</h1>
 
 <p>Make your prediction for who will survive Season 8 of Game of Thrones.</p>
 
@@ -15,3 +25,6 @@
     <li><a href="accounts/login">Login</a></li>
     <li><a href="{% url 'register_user' %}">Register</a></li>
 </ul>
+
+
+</body>
