--- a/pool/templates/profile.html
+++ b/pool/templates/profile.html
@@ -1,4 +1,10 @@
 
+{% extends "base.html" %}
+
+
+{% block content %}
+
+
 <h4>Picks for {{ user.email }}</h4>
 
 <a href="{% url 'select_characters' %}">Update your picks!</a>
@@ -23,3 +29,4 @@
 {% endfor %}
 </ul>
 
+{% endblock %}
