--- a/pool/templates/registration/login.html
+++ b/pool/templates/registration/login.html
@@ -1,3 +1,9 @@
+
+{% extends "base.html" %}
+
+
+{% block content %}
+
 <h4>Login</h4>
 
 <form method="post" action="{% url 'login' %}">
@@ -16,3 +22,5 @@
 <input type="submit" value="login">
 <input type="hidden" name="next" value="{{ next }}">
 </form>
+
+{% endblock %}
