--- a/pool/templates/select_characters.html
+++ b/pool/templates/select_characters.html
@@ -1,3 +1,10 @@
+
+{% extends "base.html" %}
+
+
+{% block content %}
+
+
 <h1>Select Characters</h1>
 
 <form action="/pool/select_characters" method="post">
@@ -9,3 +16,5 @@
 <input type="submit" value="OK">
 
 </form>
+
+{% endblock %}
