--- a/pool/templates/register_user.html
+++ b/pool/templates/register_user.html
@@ -21,12 +21,15 @@
 
 <form action="/pool/register_user" method="post">
 
+    <table>
+
     {% csrf_token %}
 
-    {{form}}
+    {{ form }}
+
+    </table>
 
     <input type="submit" value="Register">
-
 </form>
 
 {% endblock %}
