--- a/pool/static/pool/gotdp.css
+++ b/pool/static/pool/gotdp.css
@@ -16,7 +16,8 @@ div.hometitle {
     float: left;
 }
 
-div.homelogin {
+div.homeright {
+    width: 15%;
     float: right;
     font-weight: bold;
 }
