Fix bug with unselected display

--- a/pool/templates/index.html
+++ b/pool/templates/index.html
@@ -17,6 +17,8 @@
     <br/>
     <a href="{% url 'register_user' %}">Register</a>
     <br/>
+    &dagger;
+    <br/>
     <a href="{% url 'summary' %}">Summary</a>
     <br/>
 </div>
