--- a/pool/templates/base.html
+++ b/pool/templates/base.html
@@ -10,6 +10,28 @@
 
 <body> 
 
+<div>
+
+    <div class="navigation_items">
+        <a href="{% url 'index' %}">Home</a>
+    </div>
+
+    <div class="navigation_login">
+    {% if user.is_authenticated %}
+
+        <a href="logout">Logout</a>
+
+    {% else %}
+
+        <a href="accounts/login">Login</a>
+        &nbsp;&dagger;&nbsp;
+        <a href="{% url 'register_user' %}">Register</a>
+
+    {% endif %}
+    </div>
+    
+</div>
+
 <div class="content">
         {% block content %}{% endblock %}
 </div>
