--- a/pool/templates/base.html
+++ b/pool/templates/base.html
@@ -14,6 +14,7 @@
 
     <div class="navigation_items">
         <a href="{% url 'index' %}">Home</a>
+        <a href="{% url 'summary' %}">Summary</a>
     </div>
 
     <div class="navigation_login">
