--- a/pool/templates/base.html
+++ b/pool/templates/base.html
@@ -15,6 +15,7 @@
     <div class="navigation_items">
         <a href="{% url 'index' %}">Home</a>
         <a href="{% url 'summary' %}">Summary</a>
+        <a href="{% url 'scoreboard' %}">Scoreboard</a>
     </div>
 
     <div class="navigation_login">
