--- a/pool/templates/index.html
+++ b/pool/templates/index.html
@@ -17,6 +17,8 @@
     {% if user.is_authenticated %}
 
         <a href="logout">Logout</a>
+        <br/>
+        <a href="{% url 'profile' %}">Your Picks</a>
 
     {% else %}
 
@@ -28,7 +30,7 @@
     
     <br/>
     <br/>
-    <a href="{% url 'summary' %}">Summary</a>
+    <a href="{% url 'summary' %}">Totals</a>
     <br/>
 
 </div>
