--- a/pool/templates/base.html
+++ b/pool/templates/base.html
@@ -14,7 +14,7 @@
 
     <div class="navigation_items">
         <a href="{% url 'index' %}">Home</a>
-        <a href="{% url 'summary' %}">Summary</a>
+        <a href="{% url 'summary' %}">Totals</a>
         <a href="{% url 'scoreboard' %}">Scoreboard</a>
     </div>
 
@@ -22,6 +22,9 @@
     {% if user.is_authenticated %}
 
         <a href="logout">Logout</a>
+        &nbsp;&dagger;&nbsp;
+        <a href="{% url 'profile' %}">Your Picks</a>
+        
 
     {% else %}
 
