--- a/pool/templates/index.html
+++ b/pool/templates/index.html
@@ -32,6 +32,10 @@
     <br/>
     <a href="{% url 'summary' %}">Totals</a>
     <br/>
+    <a href="{% url 'scoreboard' %}">Scoreboard</a>
+    <br/>
+    <a href="{% url 'rules_disclaimers' %}">Rules</a>
+    <br/>
 
 </div>
 
