--- a/pool/templates/base.html
+++ b/pool/templates/base.html
@@ -16,14 +16,15 @@
         <a href="{% url 'index' %}">Home</a>
         <a href="{% url 'summary' %}">Totals</a>
         <a href="{% url 'scoreboard' %}">Scoreboard</a>
+        <a href="{% url 'rules_disclaimers' %}">Rules</a>
     </div>
 
     <div class="navigation_login">
     {% if user.is_authenticated %}
 
-        <a href="logout">Logout</a>
-        &nbsp;&dagger;&nbsp;
         <a href="{% url 'profile' %}">Your Picks</a>
+        &nbsp;&dagger;&nbsp;
+        <a href="logout">Logout</a>
         
 
     {% else %}
