More styling niceties.

--- a/pool/templates/base.html
+++ b/pool/templates/base.html
@@ -14,8 +14,11 @@
 
     <div class="navigation_items">
         <a href="{% url 'index' %}">Home</a>
+        &nbsp;&dagger;&nbsp;
         <a href="{% url 'summary' %}">Totals</a>
+        &nbsp;&dagger;&nbsp;
         <a href="{% url 'scoreboard' %}">Scoreboard</a>
+        &nbsp;&dagger;&nbsp;
         <a href="{% url 'rules_disclaimers' %}">Rules</a>
     </div>
 
