--- a/pool/templates/index.html
+++ b/pool/templates/index.html
@@ -40,7 +40,7 @@
 </div>
 
 <div class="homebottom">
-    <h3>Make your predictions for who will survive Season 8 of Game of Thrones.</h3>
+    <h3>Make your predictions for who will survive Season Eight of Game of Thrones.</h3>
 </div>
 
 </body>
