Calculate percentage chance of living

--- a/pool/templates/index.html
+++ b/pool/templates/index.html
@@ -8,11 +8,12 @@
 
 <body background="{% static "pool/arya_walder.jpeg" %}">
 
-<div class="hometop">
+<div class="hometitle">
     <h1>Game of Thrones Death Pool</h1>
 </div>
 
 <div class="homeright">
+    <br/>
     
     {% if user.is_authenticated %}
 
