--- a/pool/templates/index.html
+++ b/pool/templates/index.html
@@ -9,7 +9,7 @@
 <body background="{% static "pool/arya_walder.jpeg" %}">
 
 <div class="hometitle">
-    <h1>Game of Thrones Death Pool</h1>
+    Game of Thrones Death Pool
 </div>
 
 <div class="homeright">
