--- a/pool/templates/profile.html
+++ b/pool/templates/profile.html
@@ -7,7 +7,7 @@
 
 <h4>Picks for {{ user.email }}</h4>
 
-<a href="{% url 'select_characters' %}">Update your picks!</a>
+<a href="{% url 'select_characters' %}">Update</a>
 
 <br/>
 
