--- a/pool/static/pool/gotdp.css
+++ b/pool/static/pool/gotdp.css
@@ -55,3 +55,17 @@ span.emphasize {
     font-weight: bold;
     color: red;
 }
+
+th {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+td {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+td.number {
+    text-align: right;
+}
