--- a/pool/templates/register_user.html
+++ b/pool/templates/register_user.html
@@ -19,9 +19,12 @@
 
     {{ form }}
 
-    </table>
+    <tr>
+        <td></td>
+        <td><input type="submit" value="Register"></td>
+    </tr>
 
-    <input type="submit" value="Register">
+    </table>
 </form>
 
 {% endblock %}
