--- a/pool/templates/registration/login.html
+++ b/pool/templates/registration/login.html
@@ -17,9 +17,12 @@
     <td>{{ form.password.label_tag }}</td>
     <td>{{ form.password }}</td>
 </tr>
-</table>
 
-<input type="submit" value="login">
+<tr>
+    <td></td>
+    <td><input type="submit" value="login"></td>
+</tr>
+</table>
 <input type="hidden" name="next" value="{{ next }}">
 </form>
 
