--- a/pool/templates/select_characters.html
+++ b/pool/templates/select_characters.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-<h1>Select Characters</h1>
+<h3>Indicate which characters will live, and which will die.</h3>
 
 <form action="/pool/select_characters" method="post">
 
@@ -13,9 +13,12 @@
 
 <table>
 {{ form }}
-</table>
 
-<input type="submit" value="OK">
+<tr>
+    <td></td>
+    <td><input type="submit" value="OK"></td>
+</tr>
+</table>
 
 </form>
 
