--- a/pool/templates/rules.html
+++ b/pool/templates/rules.html
@@ -2,7 +2,7 @@
 <h4>Rules</h4>
 
 <ul>
-    <li>Each correct prediction is worth one point. So, getting whether Jon Snow lives or dies is worth the same as whether Podrick lives or dies. It's called democracy.</li>
+    <li>Each correct prediction is worth one point. Each incorrect (or missing) prediction is worth minus one point. So, getting whether Jon Snow lives or dies is worth the same as whether Podrick lives or dies. It's called democracy.</li>
     <li>What is dead? The passage from life to death in Westeros is much less one way than in our own world. And there are states that are not recognizably alive or dead. At the end of Season Five, Jon Snow was dead. At the end of Season Six, he was not. Is The Mountain alive or dead? Hard questions. For the purposes of this pool:
         <ul>
             <li>I cannot define dead, but I know it when I see it.</li>
