--- a/pool/templates/select_couples.html
+++ b/pool/templates/select_couples.html
@@ -26,7 +26,7 @@
 <script>
     var lastDisplayedRow = 0;
     var rows = []    
-    var rowCount = 3;
+    var rowCount = 10;
 
     window.onload=function(){
         console.log('doing loading!');
@@ -47,7 +47,10 @@
 
             rows.push(row);
 
-            if( idx > 0 ){
+            if( leftInput.selectedIndex > 0 ){
+                lastDisplayedRow = idx + 1;
+            } 
+            if( idx>lastDisplayedRow) {
                 row.style.display = 'none';
             }
         }
