--- a/pool/templates/rules.html
+++ b/pool/templates/rules.html
@@ -2,7 +2,8 @@
 <h4>Rules</h4>
 
 <ul>
-    <li>Each correct prediction is worth one point. Each incorrect (or missing) prediction is worth minus one point. So, getting whether Jon Snow lives or dies is worth the same as whether Podrick lives or dies. It's called democracy.</li>
+    <li>Participants must predict for each character whether that character will live until the end of Season Eight. Each correct prediction is worth one point. Each incorrect (or missing) prediction is worth minus one point. So, getting whether Jon Snow lives or dies is worth the same as whether Podrick lives or dies. It's called democracy.</li>
+    <li>Participants should predict every romantic relationship that will exist by the end of Season Eight. Each correctly predicted couple is worth 2 points. Minus 1 point for incorrectly predicting a couple.</li>
     <li>What is dead? The passage from life to death in Westeros is much less one way than in our own world. And there are states that are not recognizably alive or dead. At the end of Season Five, Jon Snow was dead. At the end of Season Six, he was not. Is The Mountain alive or dead? Hard questions. For the purposes of this pool:
         <ul>
             <li>I cannot define dead, but I know it when I see it.</li>
@@ -10,6 +11,19 @@
             <li>People who are walking zombies, distinctly lacking in free-will and the natural power of biological life: dead. (This includes the mountain and everyone in "The Army of the Dead".</li>
             <li>People who were once dead, but are now seemingly alive (e.g. Jon Snow, Beric Dondarrion): alive.</li>
             <li>I am just going to make declarations in the case of ambiguity. Don't like that system? <a href="https://github.com/ojplg/gotdp">Fork the code.</a></li>
+            <li>If there's an epilogue at the end of the last episode with the phrase "50 years later" and then an interlude of delightful Tarlannistark moppets frolicking in the fields with their pet dire dragons, that does not mean everyone's dead at the end of the series for the purposes of this pool.</li>
+        </ul>
+    </li>
+    <li>What's a romantic couple? At a minimum, it's two live characters. Only live people can be in a couple. It's two people who you can say "they lived happily ever after" about. Otherwise:
+        <ul>
+            <li>A couple in the modern sense. Two people who choose to be together in some kind of public, committed, entanglement, generally sanctified by marriage. Like in a rom com. Arranged marriages for political purposes do not count.</li>
+            <li>Tyrion and Sansa are not a couple. Yes, they are perhaps technically married, but they are not romantically entangled in any willing way. At least not yet.</li>
+            <li>Jaime and Cersei are not a couple. They fall short on the public thing. And at the end of Season Seven Jaime was threatened with death by Cersei, and rode away in disgust.</li>
+            <li>Sam and Gilly are not a couple. It seems like Sam is trying to take his vows more seriously, but things might change.</li>
+            <li>Jon and Dany are not a couple. They are certainly heading in that direction, but they have had just one assignation. Things are fluid.</li>
+            <li>Missandei and Grey Worm are not a couple. Saying "many things" coquettishly just isn't quite enough. Again, things are fluid.</li>
+            <li>In short, there are no couples at the moment.</li>
+            <li>As above, I will make judgements in case of ambiguity.</li>
         </ul>
     </li>
     <li>The scoreboard shows the points that people have earned as of that moment. All the characters now listed are alive, so just picking everyone to live gives you a perfect score. But do you really expect that to last?</li>
