--- a/pool/templates/scoreboard.html
+++ b/pool/templates/scoreboard.html
@@ -5,7 +5,10 @@
 
 {% block content %}
 
-<h4>Scoreboard</h4>
+<h3>Scoreboard</h3>
+
+<p>Scores will be updated as episodes are released and characters are killed off or
+make liaisons.</p>
 
 <table>
 
