--- a/pool/templates/summary.html
+++ b/pool/templates/summary.html
@@ -5,9 +5,9 @@
 
 {% block content %}
 
-<h4>Totals</h4>
+<h3>Totals</h3>
 
-<p>Shows the prediction totals for each character.</p>
+<p>The number of people predicting whether each character will live or die.</p>
 
 <table>
 
@@ -16,7 +16,7 @@
             <th></th>
             <th>Lives</th>
             <th>Dies</th>
-            <th>Chance of making it</th>
+            <th>Percent Chance of Survival</th>
         </tr> 
     </thead>
 
