--- a/pool/templates/rules.html
+++ b/pool/templates/rules.html
@@ -1,5 +1,5 @@
 
-<h4>Rules</h4>
+<h3>Rules</h3>
 
 <ul>
     <li>Participants must predict for each character whether that character will live until the end of Season Eight. Each correct prediction is worth one point. Each incorrect (or missing) prediction is worth minus one point. So, getting whether Jon Snow lives or dies is worth the same as whether Podrick lives or dies. It's called democracy.</li>
@@ -8,7 +8,7 @@
         <ul>
             <li>I cannot define dead, but I know it when I see it.</li>
             <li>People who just disappear offscreen and we don't know what happens to them: assumed alive. BUT: if someone is widely portrayed to be dead: (e.g. Bran and Rickon in the middle of Season Two, The Hound at the end of Season Four, they will be marked as dead.)</li>
-            <li>People who are walking zombies, distinctly lacking in free-will and the natural power of biological life: dead. (This includes the mountain and everyone in "The Army of the Dead".</li>
+            <li>People who are walking zombies, distinctly lacking in free-will and the natural power of biological life: dead. (This includes The Mountain and everyone in the army of the dead.</li>
             <li>People who were once dead, but are now seemingly alive (e.g. Jon Snow, Beric Dondarrion): alive.</li>
             <li>I am just going to make declarations in the case of ambiguity. Don't like that system? <a href="https://github.com/ojplg/gotdp">Fork the code.</a></li>
             <li>If there's an epilogue at the end of the last episode with the phrase "50 years later" and then an interlude of delightful Tarlannistark moppets frolicking in the fields with their pet dire dragons, that does not mean everyone's dead at the end of the series for the purposes of this pool.</li>
