--- a/pool/templates/rules.html
+++ b/pool/templates/rules.html
@@ -8,7 +8,7 @@
     <li>What is dead? The passage from life to death in Westeros is much less one way than in our own world. And there are states that are not recognizably alive or dead. At the end of Season Five, Jon Snow was dead. At the end of Season Six, he was not. Is The Mountain alive or dead? Hard questions. For the purposes of this pool:
         <ul>
             <li>I cannot define dead, but I know it when I see it.</li>
-            <li>People who just disappear offscreen and we don't know what happens to them: assumed alive. BUT: if someone is widely portrayed to be dead: (e.g. Bran and Rickon in the middle of Season Two, The Hound at the end of Season Four, they will be marked as dead.)</li>
+            <li>People who just disappear offscreen and we don't know what happens to them: assumed alive. BUT: if someone is widely portrayed to be dead: (e.g. Bran and Rickon in the middle of Season Two, The Hound at the end of Season Four) he or she will be marked as dead.</li>
             <li>People who are walking zombies, distinctly lacking in free-will and the natural power of biological life: dead. (This includes The Mountain and everyone in the army of the dead.</li>
             <li>People who were once dead, but are now seemingly alive (e.g. Jon Snow, Beric Dondarrion): alive.</li>
             <li>I am just going to make declarations in the case of ambiguity. Don't like that system? <a href="https://github.com/ojplg/gotdp">Fork the code.</a></li>
@@ -17,7 +17,7 @@
     </li>
     <li>What's a romantic couple? At a minimum, it's two live characters. Only live people can be in a couple. It's two people who you can say "they lived happily ever after" about. Otherwise:
         <ul>
-            <li>A couple in the modern sense. Two people who choose to be together in some kind of public, committed, entanglement, generally sanctified by marriage. Like in a rom com. Arranged marriages for political purposes do not count.</li>
+            <li>A couple in the modern sense. Two people who choose to be together in some kind of public, committed entanglement, generally sanctified by marriage. Like in a rom com. Arranged marriages for political purposes do not count.</li>
             <li>Tyrion and Sansa are not a couple. Yes, they are perhaps technically married, but they are not romantically entangled in any willing way. At least not yet.</li>
             <li>Jaime and Cersei are not a couple. They fall short on the public thing. And at the end of Season Seven Jaime was threatened with death by Cersei, and rode away in disgust.</li>
             <li>Sam and Gilly are not a couple. It seems like Sam is trying to take his vows more seriously, but things might change.</li>
@@ -29,6 +29,6 @@
     </li>
     <li>The scoreboard shows the points that people have earned as of that moment. All the characters now listed are alive, so just picking everyone to live gives you a perfect score. But do you really expect that to last?</li>
     <li>Predictions must be made before the first episode airs/leaks. I will release a new version of the application at that time with no ability to adjust your picks.</li>
-    <li>There's no money involved, unless people want to make bets on the side, so who really cares?</li>
+    <li>There's no money involved, unless people want to make bets on the side, so the final rule is: no arguing, no fighting.</li>
 </ul>
 
