Fix display bug of living and dying. Make tables sortable.

--- a/pool/templates/base.html
+++ b/pool/templates/base.html
@@ -6,6 +6,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="{% static "pool/gotdp.css" %}">
     <link href="https://fonts.googleapis.com/css?family=Alegreya" rel="stylesheet"> 
+    <script src="{% static "pool/tsorter.js" %}"></script>
 </head>
 
 <body> 
