--- a/pool/templates/scoreboard.html
+++ b/pool/templates/scoreboard.html
@@ -15,9 +15,9 @@ make liaisons.</p>
     <thead>
         <tr>
             <th>Competitor</th>
-            <th>Mortality Score</th>
-            <th>Romance Score</th>
-            <th>Total Score</th>
+            <th data-tsorter="numeric">Mortality Score</th>
+            <th data-tsorter="numeric">Romance Score</th>
+            <th data-tsorter="numeric">Total Score</th>
         </tr> 
     </thead>
 
