--- a/pool/templates/summary.html
+++ b/pool/templates/summary.html
@@ -14,9 +14,9 @@
     <thead>
         <tr>
             <th></th>
-            <th>&nbsp;Live</th>
-            <th>&nbsp;Die</th>
-            <th>&nbsp;Percent Chance of Survival</th>
+            <th data-tsorter="numeric">&nbsp;Live</th>
+            <th data-tsorter="numeric">&nbsp;Die</th>
+            <th data-tsorter="numeric">&nbsp;Percent Chance of Survival</th>
         </tr> 
     </thead>
 
@@ -39,7 +39,7 @@
         <tr>
             <th colspan="3">Couple</th>
             <th></th>
-            <th>Count</th>
+            <th data-tsorter="numeric">Count</th>
         </tr> 
     </thead>
 
