Correct sort in presence of colspans

--- a/pool/templates/summary.html
+++ b/pool/templates/summary.html
@@ -56,6 +56,33 @@
 
 </table>
 
+{% comment %}
+<table id="smurf_table">
+    <thead>
+        <tr>
+            <th>Letter</th>
+            <th data-tsorter="numeric">Number</th>
+        </tr>
+    </th>
+
+    <tbody>
+    <tr>
+        <td>A</td>
+        <td>1</td>
+    </tr>
+    <tr>
+        <td>B</td>
+        <td>2</td>
+    </tr>
+
+    <tr>
+        <td>C</td>
+        <td>1</td>
+    </tr>
+    </tbody>
+</table>
+{% endcomment %}
+
 <script>
 function init() {
     var sorter1 = tsorter.create('summary_table');
